// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home Page should not display any movie 1`] = `
<div>
  <div
    className="home__user--info"
  >
    <div
      className="container u-text-white"
    >
      <span>
        Hi 
      </span>
      <span
        className="u-text-large"
      >
        Unknown
      </span>
      ,
      <p
        className="u-text-white"
      >
        Welcome to Movify 😀️
      </p>
      <p
        className="u-text-white"
      >
        Add Movies and make them YOURS!
      </p>
    </div>
  </div>
  <div
    className="container"
  >
    <h1
      className="u-text-colorized"
    >
      Please add Movies to Continue...
    </h1>
  </div>
</div>
`;

exports[`HomePage should be rendered correctly 1`] = `
<div>
  <div
    className="home__user--info"
  >
    <div
      className="container u-text-white"
    >
      <span>
        Hi 
      </span>
      <span
        className="u-text-large"
      />
      ,
      <p
        className="u-text-white"
      >
        Welcome to Movify 😀️
      </p>
      <p
        className="u-text-white"
      >
        Add Movies and make them YOURS!
      </p>
    </div>
  </div>
  <div
    className="container"
  >
    <AllMoviesList
      movies={
        Array [
          Object {
            "Poster": "https://image.com",
            "createdAt": "9876543",
            "dateWatched": "234567890",
            "id": "1234567",
            "name": "The Dark Knight",
            "updatedAt": "",
            "watched": true,
            "whatYouLearnt": "The world is as good as we let it to be",
          },
          Object {
            "Poster": "https://godfather.com",
            "createdAt": "987654567890",
            "dateWatched": "98765434567",
            "id": "4567890",
            "name": "GodFather",
            "updatedAt": "",
            "watched": false,
            "whatYouLearnt": "You can act like a man what is the matter with you?",
          },
          Object {
            "Poster": "https://avengers.com",
            "createdAt": "69864123340404",
            "dateWatched": "",
            "id": "9ikjnbvfrty",
            "name": "Avengers: EndGame",
            "updatedAt": "",
            "watched": false,
            "whatYouLearnt": "Thanos will be defeated",
          },
        ]
      }
    />
  </div>
</div>
`;
